--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+6.2.0
+    - Added slider component
+    - Added datepicker component
 6.1.1
     - Refactored unit tests
     - Fixed onCheck attribute with onChange (ISS-7)
